Builded help, news, credit views, changed original language to spanish, added ui_volume control in user data, setting up things to build the complete settings view.

--- a/Flotarix/user_data/settings.json
+++ b/Flotarix/user_data/settings.json
@@ -1,6 +1,30 @@
 {
-    "username": "Player",
-    "color_theme": [
+    "ui_volume": 1.0,
+    "username1": "Jugador1",
+    "user1_color": [
+        255,
+        0,
+        0
+    ],
+    "username2": "Jugador2",
+    "user2_color": [
+        0,
+        0,
+        255
+    ],
+    "username3": "Jugador3",
+    "user3_color": [
+        0,
+        255,
+        0
+    ],
+    "username4": "Jugador4",
+    "user4_color": [
+        255,
+        255,
+        0
+    ],
+    "game_color": [
         64,
         0,
         0
